--- a/src/style/components/title.scss
+++ b/src/style/components/title.scss
@@ -1,5 +1,6 @@
 @import '../helpers/_variables';
 @import '../helpers/_mixins';
+@import '../helpers/_placeholders';
 
 
 /******* TITLE *******/
@@ -13,7 +14,9 @@
 }
 
 .title {
-  @include super-center($left: 76%);
+  @include super-center($left: inherit, $x: 0%);
+  @extend %unselectable;
+  right: 7%;
   margin: 0;
   text-transform: uppercase;
   font-size: $title;
@@ -21,5 +24,32 @@
 
   span {
     font-weight: 100;
+  }
+}
+
+
+/******* MEDIA QUERIES *******/
+
+@media only screen and (max-width: 767px) {
+  .title-container {
+    height: 5.5%;
+  }
+  .title {
+    $font: $title - 3em;
+
+    @include super-center();
+    right: inherit;
+    font-size: $font;
+  }
+}
+
+@media only screen and (max-width: 500px) {
+  .title-container {
+    height: 4.35%;
+  }
+  .title {
+    $font: $title - 4em;
+
+    font-size: $font;
   }
 }
